nohup.out
  File "/root/ft_algo_new/main.py", line 1
    try:try:try:""" Options Trading Bot - Flattrade 
        ^^^
SyntaxError: invalid syntax
